# goblin-core

./: .gitattributes  .gitignore  ARRAY-BENCHMARK.md  BENCHMARK-LANGUAGES.md  BENCHMARKS.md  CMakeLists.txt  EXTERNAL-LOGGING-ALL-TYPES-TEST.md  EXTERNAL-LOGGING-FIRST-TEST.md  EXTERNAL-LOGGING-PRIMARY-REPLICA-TEST.md  HASH-THRESHOLD-SWEEP.md  HSET-BENCHMARK.md  INSTALL.md  KAFKA-DURABILITY-BENCHMARK.md  LATENCY-SHOOTOUT.md  LICHESS-BENCHMARK.md  LIST-BENCHMARK.md  LIST-WORK-QUEUE-BENCHMARK.md  LISTS.md  LOONGSON_BENCHMARKS.md  LOONGSON_BENCHMARKS.zh-CN.md  MICROBENCHMARKS.md  NOTICE  NUMA-RING-LATENCY.md  PERFORMANCE_BRIEF.md  PUBSUB-BENCHMARK.md  README.md  README.md~  RELEASE-HISTORY.md  RELEASE.md  RING-BENCHMARKS.md  RING-LATENCY-HANDOFF.md  SET-BENCHMARK.md  TLB-BENCHMARK.md  TODO.md  XLIO-LATENCY.md  large-zset.llms.txt  llms-full.txt  llms.txt  optimizations.md  wrangler.jsonc
benchmarks/: cad_benchmark.py  collection_benchmark_worker.cpp  collection_benchmarks.py  cpp_zadd_sweep.py  external_logging_recovery.cpp  external_logging_recovery.sh  fabric_vs_rdma_latency.sh  feed_payload_uds.sh  goblin-core-replica-test.service  hash_benchmark.py  hash_speed.py  hash_threshold_sweep.py  hset_benchmark.cpp  hset_benchmark.py  hset_kafka_recovery.cpp  hset_kafka_recovery.sh  idiom_native_vs_lua.py  kafka_ack_benchmark.cpp  kafka_ack_benchmark.sh  lat_tail.py  latency_shootout.cpp  latency_shootout.sh  leaderboard_rescore_benchmark.py  list_benchmark.py  list_sbe_benchmark.cpp  list_work_queue_benchmark.cpp  microbench.cpp  mixed_leaderboard_benchmark.py  persistence.py  post_delete_read_benchmark.py  primary_replica_recovery.sh  pubsub_benchmark.cpp  pubsub_benchmark.sh  pubsub_rdma_relay_benchmark.cpp  pubsub_rebroadcast_benchmark.cpp  range_output_benchmark.py  range_output_sweep.py  range_size_sweep.py  rdma_ib_server_start.sh  rdma_ib_server_stop.sh  (+29 more)
blogs/: lichess-leaderboard.md  resp-over-infiniband.md  ring-latency.md
cmake/: goblin-coreConfig.cmake.in
docs/: authentication.md  exasock.md  index.md  infiniband-setup.md  kafka.md  maxmemory.md  rdma-rings.md  real-time-hashes.md  replication.md  ring-buffers.md  sbe-protocol.md  thunder-redpanda-deployment.md  tls.md  xlio.md
docs/commands/: AUTH.md  CLIENT.md  COMMAND.md  EVAL.md  EVALSHA.md  GOBLIN.CAD.md  GOBLIN.CAEXPIRE.md  GOBLIN.CAS.md  GOBLIN.CLAIM.md  GOBLIN.DECRPOS.md  GOBLIN.HCAD.md  GOBLIN.HSETGT.md  GOBLIN.INCRBOUND.md  GOBLIN.INCREX.md  GOBLIN.TD_LEADERBOARD_RESCORE.md  GOBLIN.ZWINDOW.md  HELLO.md  INFO.md  LUAU.EVAL.md  LUAU.EVALSHA.md  LUAU.SCRIPT.md  QUICKJS.EVAL.md  QUICKJS.EVALSHA.md  QUICKJS.SCRIPT.md  QUIT.md  README.md  SCRIPT.md  SELECT.md  TCL.EVAL.md  TCL.EVALSHA.md  TCL.SCRIPT.md  UPYTHON.EVAL.md  UPYTHON.EVALSHA.md  UPYTHON.SCRIPT.md  WREN.EVAL.md  WREN.EVALSHA.md  WREN.SCRIPT.md  ZREMRANGEBYSCORE.md  arrays.md  goblin.md  (+10 more)
html/: index.html
html/artifacts/: array.json  hset.json  list.json  set.json  zset.json
include/goblin/core/: adaptive_pma.hpp  array.hpp  array_storage.hpp  auth.hpp  blob_pool.hpp  chunked_sorted_list.hpp  command.hpp  compact_listpack.hpp  exasock.hpp  exasock_client.hpp  exasock_transport.hpp  goblin_protocol.hpp  hash.hpp  hash_listpack.hpp  hash_storage.hpp  hugetlb.hpp  kafka_ingest.hpp  key_arena.hpp  keyspace_storage.hpp  linear_hash_arena.hpp  linear_hash_index.hpp  list.hpp  list_listpack.hpp  list_value_arena.hpp  luau_script.hpp  member_offset.hpp  memory_limit.hpp  nested_command_dispatch.hpp  numa.hpp  numa_topology.hpp  page_arena.hpp  parse_int.hpp  quickjs_script.hpp  rdb.hpp  rdma_client.hpp  rdma_ring.hpp  replication.hpp  resp_parser.hpp  resp_version.hpp  resp_writer.hpp  (+33 more)
include/goblin/core/detail/: script_shared.hpp
memory/: transport-udp-roadmap.md
python/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
python/goblin_core/: __init__.py
python/src/: goblin_core_ext.cpp
python/tests/: test_reconnect.py  test_ring_roundtrip.py
sbe/: goblin_sbe.xml
scripts/: benchmark_smoke.sh  build_html_docs.py  gen_set_sbe_headers.py  main-no-io-backend.patch  naamah_bisect_test.sh  naamah_bisect_trial.sh
src/: auth.cpp  auth_cli.cpp  command.cpp  command_hash.gperf  command_hash.hpp  exasock_cli.cpp  kafka_ingest.cpp  luau_script.cpp  main.cpp  numa_topology.cpp  pubsub.cpp  pubsub.hpp  pubsub_listener.cpp  pubsub_listener.hpp  quickjs_script.cpp  rdb.cpp  rdma_cli.cpp  rdma_ring.cpp  replication.cpp  replication_follower.cpp  replication_follower.hpp  resp_parser.cpp  resp_writer.cpp  ring_cli.cpp  sbe_dispatch.cpp  script.cpp  server.cpp  simd.cpp  store.cpp  string_encoding.cpp  tcl_script.cpp  transaction.cpp  transaction.hpp  upython_script.cpp  wren_script.cpp  xlio_transport.cpp
tests/: arena_hugetlb_test.cpp  array_test.cpp  auth_socket_test.cpp  auth_test.cpp  dump_world_socket_test.cpp  exasock_roundtrip_test.cpp  goblin_core_tests.cpp  kafka_ingest_test.cpp  kafka_server_test.cpp  list_blocking_socket_test.cpp  luau_scripting.py  numa_topology_test.cpp  output_backpressure.py  pubsub_listener_ring_test.cpp  pubsub_listener_socket_test.cpp  pubsub_socket_test.cpp  pubsub_test.cpp  quickjs_scripting.py  rdma_roundtrip_test.cpp  redis_differential.py  replication_socket_test.cpp  replication_test.cpp  replication_tls_socket_test.cpp  resp3_socket_test.cpp  ring_backpressure_test.cpp  ring_hugetlb_test.cpp  ring_mirror_test.cpp  ring_reconnect_test.cpp  ring_roundtrip_test.cpp  sbe_client_test.cpp  sbe_dispatch_test.cpp  sbe_reconnect_test.cpp  sbe_socket_test.cpp  scripting.py  socket_listeners_test.cpp  socket_test_utils.hpp  tcl_scripting.py  tls_socket_test.cpp  transaction_socket_test.cpp  upython_scripting.py  (+2 more)
